[gd_scene load_steps=13 format=3 uid="uid://yoqv6h80s3db"]

[ext_resource type="Script" path="res://main.gd" id="1_vbgld"]
[ext_resource type="PackedScene" uid="uid://fdgvhp5mbfug" path="res://ui/screens/station_screen/station_screen.tscn" id="2_bjh8q"]
[ext_resource type="PackedScene" uid="uid://877c5v6ta27b" path="res://ui/screens/movement_screen/movement_screen.tscn" id="2_qlxjt"]
[ext_resource type="PackedScene" uid="uid://kwm72n7ubflo" path="res://ui/screens/supplies_screen/supplies_screen.tscn" id="4_i7alj"]
[ext_resource type="Script" path="res://game/game.gd" id="4_iwb5g"]
[ext_resource type="Script" path="res://game/party/pace/pace_selector.gd" id="4_qeesb"]
[ext_resource type="PackedScene" uid="uid://cm4hy1qtybo7h" path="res://ui/screens/map_screen/map_screen.tscn" id="5_5cq7t"]
[ext_resource type="Script" path="res://game/party/diet/diet_selector.gd" id="5_ckje5"]
[ext_resource type="Script" path="res://game/player/actions/actions.gd" id="5_hhf8d"]
[ext_resource type="Script" path="res://game/party/party.gd" id="6_7lpmj"]
[ext_resource type="PackedScene" uid="uid://dnmcgjsr3s20m" path="res://ui/screens/pace_screen/pace_screen.tscn" id="8_2y0dc"]
[ext_resource type="PackedScene" uid="uid://inhcm8u2o6cm" path="res://ui/screens/diet_screen/diet_screen.tscn" id="10_re10o"]

[node name="Main" type="Node"]
script = ExtResource("1_vbgld")

[node name="Game" type="Node" parent="."]
script = ExtResource("4_iwb5g")

[node name="Timer" type="Timer" parent="Game"]
wait_time = 3.0
autostart = true

[node name="Actions" type="Node" parent="Game"]
script = ExtResource("5_hhf8d")

[node name="PaceSelector" type="Node" parent="Game"]
script = ExtResource("4_qeesb")

[node name="DietSelector" type="Node" parent="Game"]
script = ExtResource("5_ckje5")

[node name="Party" type="Node" parent="Game"]
script = ExtResource("6_7lpmj")

[node name="Screens" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MovementScreen" parent="Screens" node_paths=PackedStringArray("game") instance=ExtResource("2_qlxjt")]
layout_mode = 1
game = NodePath("../../Game")

[node name="StationScreen" parent="Screens" node_paths=PackedStringArray("actions") instance=ExtResource("2_bjh8q")]
visible = false
layout_mode = 1
actions = NodePath("../../Game/Actions")

[node name="StartScreen" type="Control" parent="Screens"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SuppliesScreen" parent="Screens" node_paths=PackedStringArray("actions") instance=ExtResource("4_i7alj")]
visible = false
layout_mode = 1
actions = NodePath("../../Game/Actions")

[node name="MapScreen" parent="Screens" node_paths=PackedStringArray("actions") instance=ExtResource("5_5cq7t")]
visible = false
layout_mode = 1
actions = NodePath("../../Game/Actions")

[node name="PaceScreen" parent="Screens" node_paths=PackedStringArray("pace_selector", "actions") instance=ExtResource("8_2y0dc")]
visible = false
layout_mode = 1
pace_selector = NodePath("../../Game/PaceSelector")
actions = NodePath("../../Game/Actions")

[node name="DietScreen" parent="Screens" node_paths=PackedStringArray("diet_selector", "actions") instance=ExtResource("10_re10o")]
visible = false
layout_mode = 1
diet_selector = NodePath("../../Game/DietSelector")
actions = NodePath("../../Game/Actions")
